force-app/main/default/objects/Product_Price_Change__c/Product_Price_Change__c.object-meta.xml
<CustomObject>
    <description>This objects aims to update products prices through the Salesforce import functionality.</description>
    <label>Product Price Change</label>
    <nameField>
        <displayFormat>Product-{0000}</displayFormat>
        <label>Product Price Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Price Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>