force-app/main/default/objects/Product_Price_Change__c/fields/Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date__c</fullName>
    <description>Date when the price was modified</description>
    <label>Modified Date</label>
    <type>Date</type>
</CustomField>