force-app/main/default/objects/Product_Price_Change__c/fields/New_price__c.field-meta.xml
<CustomField>
    <fullName>New_price__c</fullName>
    <label>New Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>