force-app/main/default/objects/Product_Price_Change__c/fields/Old_Price__c.field-meta.xml
<CustomField>
    <fullName>Old_Price__c</fullName>
    <label>Old Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>