force-app/main/default/objects/Product_Price_Change__c/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pricebook where the product will be modified</description>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Products Price Changes</relationshipLabel>
    <relationshipName>Products_Price_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>