force-app/main/default/objects/Product_Price_Change__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pricebook__c</columns>
    <columns>Product__c</columns>
    <columns>Old_Price__c</columns>
    <columns>New_price__c</columns>
    <columns>Modified_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>